# TestJni

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/szj/testjni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/bitmap/: Bitmap.cpp  Bitmap.h  JniUtil.h  bitmap__.h
app/src/main/cpp/cube/: cube-lib.cpp
app/src/main/cpp/exa/: Macros.h  esUtil.cpp  esUtil.h  exa-lib.cpp  protol.h
app/src/main/cpp/exa/DrawElements/: DrawElements.cpp  DrawElements.h
app/src/main/cpp/exa/MipMap2D/: MipMap2D.cpp  MipMap2D.h
app/src/main/cpp/exa/SimpleTexture2D/: SimpleTexture2D.cpp  SimpleTexture2D.h
app/src/main/cpp/exa/SimpleTextureCube/: SimpleTextureCube.cpp  SimpleTextureCube.h
app/src/main/cpp/exa/SimpleVertexShader/: SimpleVertexShader.cpp  SimpleVertexShader.h
app/src/main/cpp/exa/TextureWrap/: TextureWrap.cpp  TextureWrap.h
app/src/main/cpp/exa/VertexArrayObject/: VertexArrayObject.cpp  VertexArrayObject.h
app/src/main/cpp/exa/VertexBufferObject/: VertexBufferObject.cpp  VertexBufferObject.h
app/src/main/cpp/exa/VertexBufferObjectGen3/: VertexBufferObjectGen3.cpp  VertexBufferObjectGen3.h
app/src/main/cpp/native_activity/: native-activity.cpp  native-activity.h  native_activity_h.h
app/src/main/cpp/rect/: esUtil.cpp  esUtil.h  rect-lib.cpp
app/src/main/cpp/triangle/: esUtil.cpp  triangle-lib.cpp
app/src/main/java/com/szj/testjni/: HelloJavaActivity.java  MainActivity.kt  NBitmapActivity.kt  NBitmapLib.java  NDKApplication.kt
app/src/main/java/com/szj/testjni/cube/: CubeActivity.kt  CubeLib.java  CubeView.kt
app/src/main/java/com/szj/testjni/exa/: ExaActivity.kt  ExaLib.java  ExaView.kt
app/src/main/java/com/szj/testjni/rect/: RectActivity.kt  RectLib.java  RectView.kt
app/src/main/java/com/szj/testjni/triangle/: TriangleActivity.kt  TriangleLib.java  TriangleView.kt
app/src/main/res/layout/: activity_main.xml  activity_nbitmap.xml
app/src/test/java/com/szj/testjni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
